<resources>
    <string name="app_name">东方遥控宝</string>
    <string name="title_recommend">推荐</string>
    <string name="title_channel">频道</string>
    <string name="title_application">应用</string>
    <string name="title_remote_control">遥控</string>
    <string name="title_myself">我的</string>
    <string name="login">登录中...</string>
    <string name="pwd_error">您的账号或者密码错误</string>
    <string name="req_error">请求失败,请稍后重试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Zxing-->
    <string name="msg_default_status">将扫描框对准二维码，即可自动扫描</string>

    <!--App update-->
    <string name="update_app_model_prepare">准备下载</string>
    <string name="update_app_model_progress">已下载 %1$d%2$s</string>
    <string name="update_app_model_success">下载成功(点击完成安装)</string>
    <string name="update_app_model_error">下载失败(点击使用浏览器下载)</string>

    <!--支付密码控件内容类型 -->
    <string-array name="passwordTypeArr">
        <item>numberPassword</item>
        <item>textPassword</item>
        <item>textVisiblePassword</item>
        <item>textWebPassword</item>
    </string-array>

    <!-- 订单信息-->
    <string name="un_fa_huo">共:%1$s件商品 总计￥:%2$.2f</string>
</resources>
