<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_home_normal"
        android:title="@string/title_recommend" />

    <item
        android:id="@+id/navigation_channel"
        android:icon="@drawable/tab_channel_normal"
        android:title="@string/title_channel" />
    <item
        android:id="@+id/navigation_remotecontrol"
        android:icon="@drawable/tab_remote_normal"
        android:title="@string/title_remote_control" />

    <item
        android:id="@+id/navigation_application"
        android:icon="@drawable/tab_application_normal"
        android:title="@string/title_application" />

    <item
        android:id="@+id/navigation_myself"
        android:icon="@drawable/tab_my_normal"
        android:title="@string/title_myself" />

</menu>
